# rust-projects

projects-cleaner-cli/: .gitignore  Cargo.toml  README.md  author.txt  config.toml
projects-cleaner-cli/src/: clean_project.rs  config.rs  delete_target.rs  lib.rs  models.rs  mrclean.rs  process_command.rs  project.rs
raycasting-engine/: Cargo.toml  README.md
raycasting-engine/examples/: runner.rs
raycasting-engine/levels/: map1.txt  map2.txt  map3.txt  map4.txt
raycasting-engine/src/: coords2_d.rs  font.rs  gfx.rs  lib.rs  map.rs  player.rs  raycast.rs  tween_service.rs
rust-api/: .env.example  Cargo.toml  README.md  author.txt  docker-compose.yml
rust-api/postgres/: 0001-mig.sql  0002-seed.sql
rust-api/src/: app_error.rs  lib.rs  main.rs  structs_and_enums.rs
rust-api/src/postgres/: mod.rs  postgres_adapter.rs  postgres_error.rs  postgres_request_builder.rs
rust-api/src/routes/: auth.rs  mod.rs  sessions.rs  users.rs
