[package]
name = "hoarder_dragon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
inquire = "0.9.1"
walkdir = "2.5.0"
inquire-derive = "0.9.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
spinoff = { version = "0.8.0", features = ["dots", "arc", "line"] }
