[package]
name = "tp-sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
getrandom = "0.4.3"
poem = { version = "3.1.12", features = ["requestid", "cookie"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono"] }
strum = { version = "0.28.0", features = ["derive", "strum_macros"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["full"] }
